# tigramite

./: flake.nix  pyproject.toml
gui/: methods.py
neurips2020/: compute_experiments.py
tests/: __init__.py  test_independence_tests.py  test_models.py  test_pc_calculations.py  test_pcmci_calculations.py
tests/pc/: test_pc_parallel_inner_calculations.py  test_pc_parallel_outer_calculations.py  test_pc_stable_calculations.py
tests/pcmci/: test_jpcmciplus_calculations.py  test_pcmci_calculations.py  test_pcmci_construction.py  test_pcmciplus_calculations.py
tigramite/: __init__.py  models.py  pc.py  pcmci.py  pcmci_base.py  pcparallel.py  pcstable.py
tigramite/pc/: __init__.py  _base.py  pcparallelinner.py  pcparallelouter.py  pcstable.py
tigramite/pcmci/: __init__.py  _base.py  jpcmciplus.py  lpcmci.py  pcmci.py  rpcmci.py
