[[tool.poetry.source]]
name = "pypi-public"
url = "https://pypi.org/simple/"
priority = "primary"


[tool.poetry.group.dev.dependencies]
pylint = "^3.2.2"

[tool.poetry]
name = "tigramite"
version = "5.2.5.2"
description = "Tigramite causal inference for time series"
authors = ["Jakob Runge <jakob@jakob-runge.com>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/jakobrunge/tigramite/"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
numpy = "<1.24,>=1.18"
scipy = ">=1.10.0"
numba = "==0.56.4"
six = "*"
ortools = "^9.10.4067"

[tool.poetry.extras]
gpregression = ["scikit-learn"]
plotting = ["matplotlib", "seaborn", "networkx"]
GPDC = ["torch", "gpytorch", "dcor"]
CMIsymb = ["joblib"]
RPCMCI = ["ortools"]

[tool.poetry.dev-dependencies]
nose = "*"
pytest = "*"
networkx = ">=3.0"
scikit-learn = ">=1.2"
gpytorch = ">=1.9.1"
dcor = ">=0.6"
torch = ">=1.13.1,<2.3.0"

[tool.pyright]
venvPath = "."
venv = ".venv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
